--- a/komponen/pug/_component.pug
+++ b/komponen/pug/_component.pug
@@ -7,7 +7,15 @@ include _admissionConsent.pug
 include _pencarian.pug
 include _rawatinap.pug
 include _Alphabet.pug
-include _lab.pug
-include _radiologi.pug
 include _berita.pug
-
+include _edukasivisual.pug
+include _poliklinik.pug
+include _vidio.pug
+include _artikel.pug
+include _sehat.pug
+include register.pug 
+include _lab.pug
+include _radi.pug
+include _medical.pug
+include _doctorcart.pug
+include _bedStatusMixin.pug
