--- a/komponen/pug/_navbar.pug
+++ b/komponen/pug/_navbar.pug
@@ -22,9 +22,9 @@ mixin navbar
       .dropdown
         a(href="#", class="dropbtn") LAYANAN
         .dropdown-content
-          a(href="#") Poli Klinik
+          a(href="poliklinik.html") Poli Klinik
           a(href="gawatDarurat.html") Gawat Darurat
-          a(href="labo.html") Laboratorium
+          a(href="lab.html") Laboratorium
           a(href="#") Medical Checkup
           a(href="radiologi.html") Radiologi
 
@@ -32,11 +32,11 @@ mixin navbar
         a(href="#", class="dropbtn") BERITA & ARTIKEL KESEHATAN
         .dropdown-content
           a(href="Alphabet.html") Kelainan Penyakit
-          a(href="#") Artikel Populer
-          a(href="#") Edukasi Visual
-          a(href="#") Bicara Sehat
+          a(href="artikel.html") Artikel Populer
+          a(href="edukasivisual.html") Edukasi Visual
+          a(href="sehat.html") Bicara Sehat
           a(href="berita.html") Berita
-          a(href="") Video
+          a(href="vidio.html") Video
           a(href="VisiMisi.html") Visi & Misi
 
     .navbar-actions
