--- a/komponen/pug/_lab.pug
+++ b/komponen/pug/_lab.pug
@@ -1,37 +1,29 @@
-mixin laboratoryLayout()
-  .container
-    //- Header
-    header
-      h2 Selamat Datang Di
-      h1 Laboratorium
-
-    //- Description Section
-    .description
-      p.description-title Deskripsi
-      p.description-text
-        | Laboratorium RSUI merupakan layanan laboratorium terpadu sehingga memiliki laboratorium patologi klinik,
-        | patologi anatomi, mikrobiologi, parasitologi, biomolekuler, dan bank darah. ... (content shortened for example)
-
-    //- Navigation Section
-    .navigation
-      ul.nav-list
-        li.nav-item: a(href='#') Laboratorium Patologi Klinik
-        li.nav-item: a(href='#') Laboratorium Patologi Anatomi
-        li.nav-item: a(href='#') Laboratorium Mikrobiologi Klinik
-        li.nav-item: a(href='#') Laboratorium Biomolekuler
-        li.nav-item: a(href='#') Laboratorium Parasitologi
-        li.nav-item: a(href='#') Laboratorium Darah
-
-    //- Gallery Section
-    .gallery
-      h2 Galeri
-      .gallery-images
-        .gallery-item
-          img(src='path/to/lab-image1.jpg' alt='Laboratorium 1')
-          p Laboratorium 1
-        .gallery-item
-          img(src='path/to/lab-image2.jpg' alt='Laboratorium 2')
-          p Laboratorium 2
-        .gallery-item
-          img(src='path/to/lab-image3.jpg' alt='Laboratorium 3')
-          p Laboratorium 3
+mixin breadcrumb
+  .breadcrumb-section
+    a(href="#") Home
+    |  /
+    a(href="#") Layanan
+    |  / Laboratorium
+mixin mainImage(imageSrc, altText)
+  .image-wrapper
+    img(src=imageSrc, alt=altText, width="600", height="400")
+    .image-caption Selamat Datang di Laboratorium
+mixin description
+  .lab-details
+    h2.section-title Deskripsi
+    h3.sub-section-title Pelayanan
+    p.description-text Laboratorium kami menerapkan konsep laboratorium terpadu sehingga memiliki laboratorium patologi klinik, patologi anatomi, mikrobiologi, parasitologi, biokimia/kimia klinik, bank darah, serologi dan imunologi...
+    ul.lab-list
+      li Laboratorium Patologi Klinik
+      li Laboratorium Patologi Anatomi
+      li Laboratorium Mikrobiologi
+      li Laboratorium Biokimia/Kimia Klinik
+      li Laboratorium Parasitologi
+      li Laboratorium Darah
+mixin gallery
+  .gallery-section
+    h2.gallery-title GALERI
+    .gallery-images
+      img(src="https://storage.googleapis.com/a1aa/image/Pec9ZpVt29RpASsrr3jwrduD2UdMYi6RCNFsQSMRbIxtkI3JA.jpg", alt="Laboratory equipment and workspace", width="200", height="150")
+      img(src="https://storage.googleapis.com/a1aa/image/RaFgw2HWDHYELRB1QF0KosjsVn0brMUseN6YhebvF6UYJRuTA.jpg", alt="Laboratory technicians working with microscopes", width="200", height="150")
+      img(src="https://storage.googleapis.com/a1aa/image/mMrhx311veTRQaqVh9wU3iil9FwauLqOv78IjQzuskVrkI3JA.jpg", alt="Close-up of laboratory instruments and tools", width="200", height="150")
