--- a/radiologi.pug
+++ b/radiologi.pug
@@ -1,28 +1,22 @@
 extends komponen/pug/_template.pug
 
 block content
-  section.radiology
-    .container
-      .header
-        h1 Selamat Datang Di
-        h2 Radiologi
+  .container
+    .breadcrumb
+      a(href="#") Home
+      | /
+      a(href="#") Layanan
+      | / Radiologi
 
-      .description
-        p Unit Radiologi RSUI memiliki layanan unggulan dalam bidang neuroradiologi, radiologi abdomen, radiologi muskuloskeletal, serta radiologi intervensional dan kardiovaskular. Unit Radiologi RSUI memiliki 5 dokter spesialis radiologi yang memiliki subspesialis di bidangnya masing-masing sehingga pelayanan dan pemeriksaan pasien menjadi lebih terarah dan komprehensif. Unit Radiologi RSUI memiliki beberapa modalitas pemeriksaan mulai dari sederhana hingga pemeriksaan canggih, yang terdiri atas:
+    +headerImage("https://storage.googleapis.com/a1aa/image/k8KjKhqma7IVHddpAvkMvZkxo2OErrC6XBw00r1eZ2NWXR3JA.jpg", "Radiology Room", "Selamat Datang Di", "Radiologi")
 
-      .services
-        ul
-          li
-            a(href="#") Digital radiography (DR)
-            p Yang dapat diaplikasikan sebagai pemeriksaan dasar dan sederhana untuk berbagai organ. Salah satu keunggulan alat DR di Unit Radiologi RSUI adalah memiliki kemampuan untuk pemeriksaan scoliosis program, long spine, dan long leg, sehingga dapat tervisualisasi optimal seluruh segmen tulang belakang (vertebra) maupun daerah panggul hingga kaki.
-          li: a(href="#") Digital Mammografi
-          li: a(href="#") Ultrasonografi
-          li: a(href="#") CT scan 128 slices
-          li: a(href="#") MRI 1.5 Tesla
+    +description("Deskripsi", "Unit Radiologi RSUPN Sumenep memiliki layanan unggulan dalam bidang neuroradiologi, radiologi abdomen, radiologi muskuloskeletal, serta radiologi intervensi dan kardiovaskular. Unit Radiologi RSU memiliki 5 dokter spesialis radiologi yang memiliki subspesialisasi di bidangnya masing-masing sehingga pelayanan dan pemeriksaan pasien menjadi lebih terarah dan komprehensif.")
 
-      .gallery
-        h3 Galeri
-        .gallery-images
-          img(src="path/to/image1.jpg" alt="Radiologi Image 1")
-          img(src="path/to/image2.jpg" alt="Radiologi Image 2")
-          img(src="path/to/image3.jpg" alt="Radiologi Image 3")
+    .services
+      +serviceItem("Digital Radiography (DR)", "Yang dapat diaplikasikan sebagai pemeriksaan dasar dan sederhana untuk berbagai organ...", "dr-content")
+      +serviceItem("Digital Mammography", "Merupakan alat pencitraan payudara menggunakan sinar x sebagai alat skrining deteksi kanker payudara.", "mammography-content")
+      +serviceItem("Ultrasonografi", "Dapat diaplikasikan untuk pemeriksaan multi-organ baik organ tubuh dalam maupun organ tubuh luar (superfisial), termasuk juga pemeriksaan ultrasonografi doppler vaskular untuk mendeteksi kelainan pembuluh darah...", "ultrasonography-content")
+      +serviceItem("CT scan 128 slices", "Deskripsi untuk layanan CT Scan 128 slices.", "ctscan-content")
+      +serviceItem("MRI 1.5 Tesla", "Deskripsi untuk layanan MRI 1.5 Tesla.", "mri-content")
+
+    +gallery([{src: "https://storage.googleapis.com/a1aa/image/95IcxdMMxNLRB5wM24Uy6Cpxp2w92ByX7VNUeZXj11euuiuTA.jpg", alt: "CT scan machine"}, {src: "https://storage.googleapis.com/a1aa/image/k8KjKhqma7IVHddpAvkMvZkxo2OErrC6XBw00r1eZ2NWXR3JA.jpg", alt: "Radiology room"}, {src: "https://storage.googleapis.com/a1aa/image/nFSSf6bpETQpTCz2hTJAPrj5hve7Ts9EoPIjhKtD7oWquiuTA.jpg", alt: "MRI machine"}])
